LPS-120925 Rename "Provider" schema / resource impl class to "SamlProvider" because this is the only way to give it more context on Import/Export Centre
